# client

./: .gitignore  CMakeLists.txt  ChatBubbleIn.qml  ChatEmulator.qml  Main.qml  MessageLine.qml  accountmanager.cpp  accountmanager.h  audiomanager.cpp  audiomanager.h  client.cpp  client.h  filemanager.cpp  filemanager.h  main.cpp  messagemanager.cpp  messagemanager.h  networkmanager.cpp  networkmanager.h  resources.qrc
Core/: client.cpp  client.h  configmanager.cpp  configmanager.h
Logger/: logger.cpp  logger.h
Managers/: accountmanager.cpp  accountmanager.h  audiomanager.cpp  audiomanager.h  cryptomanager.cpp  cryptomanager.h  filemanager.cpp  filemanager.h  messagemanager.cpp  messagemanager.h  responsehandler.cpp  responsehandler.h
Managers/MessageManagers/: messagehandler.cpp  messagehandler.h  messagesender.cpp  messagesender.h  messagestorage.cpp  messagestorage.h
Network/: filenetworkmanager.cpp  filenetworkmanager.h  messagenetworkmanager.cpp  messagenetworkmanager.h  networkmanager.cpp  networkmanager.h
Utils/: apptheme.cpp  apptheme.h  avatargenerator.cpp  avatargenerator.h  logger.h
proto/chats/: contactsList.proto  updatingChats.proto
proto/files/: fileChecker.proto  files.proto
qmlFiles/: ChatBubble.qml  ChatBubbleIn.qml  ChatBubbleOut.qml  ChatsList.qml  CreateGroupForm.qml  EditFiledInformation.qml  EditProfileDialog.qml  ExampleChatBubble.qml  FallbackImage.qml  GroupInfoForm.qml  LoginPage.qml  Main.qml  Main.qml.autosave  MessageLine.qml  MyProfile.qml  ProfilePanel.qml  RegPage.qml  SelectContactsForm.qml  SmartImage.qml  ThemeSettings.qml  UsersSearchList.qml  pageSwitch.qml  personalChatsList.qml
shaders/: roundImage.frag
